// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | PageWrapper PageWrapper 1`] = `
<div
  className="PageWrapper__Outer-sc-1ur2ylx-0 iYsWey"
>
  <div
    className="PageWrapper__Inner-sc-1ur2ylx-1 kOfIEH"
  >
    <div
      className="Box__StyledDiv-sc-1bfv3i9-0 iBOtCP"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
      >
        Page contents inside the PageWrapper can be anything.
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | PageWrapper PageWrapper with a custom background 1`] = `
<div
  className="PageWrapper__Outer-sc-1ur2ylx-0 fWdHha"
>
  <div
    className="PageWrapper__Inner-sc-1ur2ylx-1 kOfIEH"
  >
    <div
      className="Box__StyledDiv-sc-1bfv3i9-0 iBOtCP"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
      >
        Page contents inside the PageWrapper can be anything.
      </span>
    </div>
  </div>
</div>
`;
